# alunotes-bt

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile.bridge  Makefile  README.md  config.yaml.example  docker-compose.gpu.yml  docker-compose.yml  go.mod
.claude/: settings.json
alunotes-ai/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
alunotes-ai/alunotes_ai/: __init__.py  app.py  config.py  memory.py  queue.py
alunotes-ai/alunotes_ai/asr/: engine.py  filters.py  resample.py  router.py  srt.py  vad.py
alunotes-ai/alunotes_ai/diarization/: engine.py  router.py
alunotes-ai/alunotes_ai/inference/: router.py
alunotes-ai/scripts/: download_models.py  ollama_autoconfig.sh  test_lstm_to_gpu.py  test_rocm_diarization.py  test_rocm_profile.py
alunotes-ai/tests/: conftest.py  test_asr.py  test_diarization.py  test_inference.py
alunotes-bt-web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  test-orpc.ts  tsconfig.json
alunotes-bt-web/prisma/: schema.prisma
alunotes-bt-web/public/: manifest.json  sw.js
alunotes-bt-web/src/: env.js
cmd/bridge/: main.go
deploy/: alunotes-ai.service  alunotes-bridge.service  alunotes-bt-rfkill.service  alunotes-supervisor.service  alunotes-supervisor.sh  alunotes-web.service  bt-poweroff.sh  dbus-alunotes.conf  disable-pipewire-bt.conf  install-docker.sh  install.sh  restore-bt-factory.sh
docs/: architecture.md
internal/api/: server.go
scripts/: detect-gpu.sh  run-all.sh  test-hfp.sh
(+136 files in other folders)
